--- a/main.html
+++ b/main.html
@@ -9,7 +9,19 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
-</script>
+   </script>
+
+	<ol>
+		<li data-ns-test="shoppingList">Phone</li>
+		<li data-ns-test="shoppingList">Dress</li>
+		<li data-ns-test="shoppingList">Kit</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test="holidayList">Hyderabad</li>
+		<li data-ns-test="holidayList">Goa</li>
+		<li data-ns-test="holidayList">US</li>
+	</ul>
 
 </body>
 
